# mhyatt000.github.io

./: .gitattributes  .gitignore  404.html  _config.yml  feed.xml  index.html  pyproject.toml  robots.txt  sitemap.xml
_bibliography/: papers.bib
_data/: citations.yml  repositories.yml  socials.yml  venues.yml
_layouts/: about.liquid
_news/: 20250501-ndseg.md  20250502-nsf-grfp.md  20250701-atpesc25.md  20251001-sc25.md
_pages/: about.md  blog.md  cv.md  projects.md
_pages/dropdown/: index.html
_posts/: 2025-11-23-git.md
_projects/: 1_project.md  2_project.md  3_project.md  4_project.md  5_project.md  6_project.md  7_project.md  8_project.md  9_project.md  bela.md  go2.md  wip.md
_sass/: _themes.scss  _variables.scss
assets/css/: main.css  main.css.map
assets/js/: giscus-setup.js  search-data.js
assets/json/: resume.template.json
assets/jupyter/: blog.ipynb.html
blog/: index.html
blog/2015/: index.html
blog/2020/: index.html
blog/2021/: index.html
blog/2022/: index.html
blog/2023/: index.html
blog/2024/: index.html
blog/2025/: index.html
books/: index.html
books/2025/: index.html
books/the_godfather/: index.html
cv/: index.html
news/: index.html
news/20250501-ndseg/: index.html
news/20250502-nsf-grfp/: index.html
news/20250701-atpesc25/: index.html
news/20251001-sc25/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
people/: index.html
projects/: index.html
projects/1_project/: index.html
projects/2_project/: index.html
projects/3_project/: index.html
projects/4_project/: index.html
projects/5_project/: index.html
projects/6_project/: index.html
publications/: index.html
repositories/: index.html
teaching/: index.html
(+75 files in other folders)
